creates new seeders for database, fixes overflow problem on stockName, watchout for database bugs

--- a/frontend/src/components/Stock/news.css
+++ b/frontend/src/components/Stock/news.css
@@ -198,6 +198,8 @@
 }
 
 .stockName {
+    height: 60px;
+    overflow: scroll;
     line-height: 30px;
     margin-top: 0px;
     margin-bottom: 0px;
